BMSSimplificationEclipseWS/EUFULL-Org-Backup/src/objects/VMobile_Object_Configuration_vod__c.object
<CustomObject>
    <description>The VMobile Object Configuration object controls what objects and records are sent to the VMobile Tablet. The data is entered on the VMobile Object Configuration tab.</description>
    <fields>
        <fullName>Account_Lookup_Field_vod__c</fullName>
        <description>Once populated with a value, the sync server will consider the object to be part of the incremental account sync and send it down.</description>
        <label>Account Lookup Field</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field determines if the row is used when calculating the a user tablet configuration.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Child_Object_Name_vod__c</fullName>
        <description>Not currently supported - Holds the value of the child object.</description>
        <label>Child Object Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Child_Relationship_vod__c</fullName>
        <description>Not currently supported - Used to store a child relationship.</description>
        <label>Child Relationship</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Device_vod__c</fullName>
        <description>This determines the Client Device.  A blank value is interpreted as Tablet_vod.</description>
        <label>Device</label>
        <picklist>
            <picklistValues>
                <fullName>WinModern_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tablet_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>iPad_vod</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Enable_Enhanced_Sync_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable for objects which use a Private sharing model or have an updated Where clause. Forces a full comparison of all the object&apos;s records the user has access to with the records on the device. Note: This has the potential to significantly increase sync times. This field is ignored for the Account Object and any child objects of Account, which always has this enabled.</description>
        <inlineHelpText>Enable to force a refresh on objects which use a Private sharing model or have an updated Where clause. May cause an in increase sync times.</inlineHelpText>
        <label>Enable Enhanced Sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Exclude_Field_List_vod__c</fullName>
        <description>Allows a small number of fields to be excluded from the download to the client device.</description>
        <label>Exclude Field List</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_ID_vod__c</fullName>
        <description>This is an out of the box External Id field provided. There is no logic associated with how this gets populated. This field if used will have to be populated by the implementation team.  This field will be used for data loading.</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Field_List_vod__c</fullName>
        <description>Limits the columns sent to the client device to the comma separated list of fields.  This should be used with care and a large amount of testing.</description>
        <inlineHelpText>Limits the columns sent to the client device to the comma separated list of fields.  This should be used with care and a large amount of testing.</inlineHelpText>
        <label>Limit Fields To List</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Include_Attachments_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines if the mobile synchronization process should synchronize attachment information for this object. Attachment body will only be loaded on demand.</description>
        <inlineHelpText>Include attachment information when synchronizing object.</inlineHelpText>
        <label>Include Attachments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Include_Related_Objects_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines if the tablet configuration should determine what objects are related to this object based on its related list (layout based).  It is only valid for Top Level Objects.</description>
        <label>Include Related Objects</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Meta_Data_Only_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this box is checked then the sync process will never download data for this object. Used for data that is only sent up from the tablet.</description>
        <label>Meta Data Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Object_Name_vod__c</fullName>
        <description>Name of the object to add to the tablet configuration.</description>
        <label>Object Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Object_Name_vod__c</fullName>
        <description>If an object is to be processed as a child of another object, the name of the parent object is stored in this field.</description>
        <label>Parent Object Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profile_ID_vod__c</fullName>
        <description>Stores the Profile ID that the row of data applies to.  If the value is null or blank then it applies to all.  If the Profile ID is present then it will override any rows with null or blank values and the same object.</description>
        <label>Profile</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profile_Name_vod__c</fullName>
        <description>The Profile that this record applies to.</description>
        <label>Profile Name</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship_Field_vod__c</fullName>
        <description>Not currently supported - If a object is a child of another object this stores the field name of the relationship  between the parent and the child object.</description>
        <label>Relationship Field</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship_Name_vod__c</fullName>
        <description>If an object is a child of another object this stores the relationship name between the parent and the child object.</description>
        <label>Relationship Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_vod__c</fullName>
        <description>Sets the behavior of the configuration row.  T - Top Level Object which means other objects can reference it.  F - Full object sync.  R - Relates to a Top Level Object.</description>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>T</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Where_Clause_vod__c</fullName>
        <description>This field contains the where clause that will be added to the query of  a Top Level or Full Sync object.  Example : Where Account.Name != null</description>
        <label>Where Clause</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <label>VMobile Object Configuration</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Device_vod__c</columns>
        <columns>Type_vod__c</columns>
        <columns>Object_Name_vod__c</columns>
        <columns>Profile_ID_vod__c</columns>
        <columns>Profile_Name_vod__c</columns>
        <columns>Account_Lookup_Field_vod__c</columns>
        <columns>Where_Clause_vod__c</columns>
        <columns>Active_vod__c</columns>
        <columns>Parent_Object_Name_vod__c</columns>
        <columns>Meta_Data_Only_vod__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>External_ID_vod__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ipad</fullName>
        <columns>NAME</columns>
        <columns>Device_vod__c</columns>
        <columns>Type_vod__c</columns>
        <columns>Object_Name_vod__c</columns>
        <columns>Profile_ID_vod__c</columns>
        <columns>Where_Clause_vod__c</columns>
        <columns>Profile_Name_vod__c</columns>
        <columns>Account_Lookup_Field_vod__c</columns>
        <columns>External_ID_vod__c</columns>
        <columns>Active_vod__c</columns>
        <columns>Parent_Object_Name_vod__c</columns>
        <columns>Meta_Data_Only_vod__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Device_vod__c</field>
            <operation>equals</operation>
            <value>iPad_vod</value>
        </filters>
        <label>ipad</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>TSM-{0000000}</displayFormat>
        <label>VMobile Object Configuration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>VMobile Object Configurations</pluralLabel>
    <recordTypes>
        <fullName>TABLET</fullName>
        <active>true</active>
        <label>TABLET</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Object_Name_vod</fullName>
        <active>true</active>
        <description>Object_Name_vod must be specified.</description>
        <errorConditionFormula>Object_Name_vod__c=NULL</errorConditionFormula>
        <errorMessage>Object Name must be specified.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Parent_Object_Name_vod</fullName>
        <active>true</active>
        <description>Parent_Object_Name_vod and Relationship_Name_vod must be specified on VMOCs that relate to a top level object</description>
        <errorConditionFormula>AND(OR(Parent_Object_Name_vod__c=NULL,Relationship_Name_vod__c=NULL),ISPICKVAL(Type_vod__c,&apos;R&apos;))</errorConditionFormula>
        <errorMessage>Parent Object Name and Relationship Name must be specified on VMOCs that relate to a top level object</errorMessage>
    </validationRules>
</CustomObject>